update: API contract
